@@ -25,6 +25,7 @@ Date: ????
     - Handle machines and modules with quality
     - The items/m button can move/hide, detect that
     - Better detect quality from the sprite button
+    - Store power and pollution in the factory table
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2025. 03. 07
